--- a/react/index.html
+++ b/react/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title></title>
+		<title>React Hello World</title>
 		<script src="react.production.min.js"></script>
 		<script src="react-dom.production.min.js"></script>
 	</head>
